2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincIdent.cs:
	* ZincModel.cs:
	* IZincIdentBox.cs:
	* ZincOutputItem.cs:
	* ZincExpression.cs:
	* ZincAssignItem.cs:
	* IZincExpression.cs:
	* ZincAnnotations.cs:
	* ZincIdentBoxBase.cs:
	* ZincTypeInstExpression.cs:
	* IZincIdentExpressionBox.cs:
	* ZincIdentExpressionBoxBase.cs:
	* IZincIdentReplaceContainer.cs:
	* ZincTypeInstExpressionIdent.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincScalar.cs:
	* ZincSolveType.cs:
	* ZincPrintUtils.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincModel.cs:
	* ZincSolveType.cs:
	* ZincAnnotation.cs:
	* ZincVarDeclItem.cs:
	* ZincIncludeItem.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincModel.cs:
	* IZincItem.cs:
	* ZincIncludeItem.cs:
	* ZincVarDeclItem.cs:
	* ZincAnnotationItem.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincData.cs:
	* ZincIdent.cs:
	* ZincVarPar.cs:
	* IZincIdentBox.cs:
	* ZincPrintUtils.cs:
	* ZincExpression.cs:
	* ZincIncludeItem.cs:
	* ZincIdentBoxBase.cs:
	* ZincAnnotationItem.cs:
	* IZincIdentContainer.cs:
	* ZincTypeInstExpression.cs:
	* IZincIdentReplaceContainer.cs:
	* ZincTypeInstExpressionIdent.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincIdent.cs:
	* ZincExpression.cs:
	* ZincIdentBoxBase.cs:
	* IZincIdentContainer.cs:
	* ZincTypeInstExpression.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincIdentBoxBase.cs:
	* ZincTypeInstExpression.cs:
	* TypeInstExpressionIdent.cs:
	* ZincTypeInstExpressionIdent.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincIdentBoxBase.cs:
	* ZincAnnotationItem.cs:
	* ZincTypeInstExpression.cs:
	* TypeInstExpressionIdent.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincIdent.cs:
	* ZincIdentBoxBase.cs:
	* IZincIdentContainer.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincIdent.cs: